@@ -6,6 +6,7 @@
   "HTML Tidy for HTML5 for Linux version 5.2.0">
   <meta name="generator" content="Bluefish 2.2.9">
   <meta name="generator" content="Bluefish 2.2.9">
+  <meta name="generator" content="Bluefish 2.2.9">
   <meta content="text/html; charset=utf-8" http-equiv=
   "Content-Type">
 
@@ -16,7 +17,7 @@
   "Documenting usage of Ublu which is an extensible object-disoriented interpretive language for midrange and mainframe remote system programming"
   name="description">
   <meta http-equiv="Last-Modified" content=
-  "Wed, 10 Jan 2018 15:55:58 UTC">
+  "Sat, 20 Jan 2018 04:16:23 UTC">
   <meta http-equiv="content-type" content=
   "text/html; charset=utf-8">
   <link rel="stylesheet" type="text/css" href="ublujedit.css">
@@ -64,7 +65,7 @@
 
   <p>Author: Jack J. Woehr<br>
   Original date: 2013-07-11<br>
-  Last edit: 2018-01-10</p>
+  Last edit: 2018-01-19</p>
 
   <pre>
  Copyright (c) 2015, Absolute Performance, Inc.
@@ -17243,6 +17244,10 @@ ciptool
 
     <p>Strings are <a href=
     "#Autonomic_Tuple_Variables">autonomic</a>.</p>
+
+
+    <p>There are extensions for strings in
+    <code>extensions/ux.string.ublu</code>&nbsp;.</p>
 
 
     <p>The default operation is <tt>-new</tt>&nbsp;.</p>
